Update: 修正 ETF搜尋手機版 tab切換、申購按鈕
- 修正 ETF搜尋手機版切換 tab 顯示正確的欄位
- 調整 若ETF無法申購，手機版申購按鈕區塊不顯示

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/_EtfSearchResult.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/_EtfSearchResult.cshtml
@@ -35,12 +35,12 @@
             <div class="c-tab__collapse">
                 <a href="#" class="c-tab__switch"></a>
                 <div class="c-tab__dropdown">
-                    <a href="#" class="c-tab__clone is-active" target="_self" title="市價績效" data-tab-target="tab-1" data-filter-switch-columns="1">市價績效</a>
-                    <a href="#" class="c-tab__clone " target="_self" title="淨值績效" data-tab-target="tab-2" data-filter-switch-columns="2">淨值績效</a>
-                    <a href="#" class="c-tab__clone " target="_self" title="市價風險" data-tab-target="tab-3" data-filter-switch-columns="3" data-filter-switch="#uid-template-marketRisk">市價風險</a>
-                    <a href="#" class="c-tab__clone " target="_self" title="淨值風險" data-tab-target="tab-4" data-filter-switch-columns="4" data-filter-switch="#uid-template-netWorthRisk">淨值風險</a>
-                    <a href="#" class="c-tab__clone " target="_self" title="交易狀況" data-tab-target="tab-5" data-filter-switch-columns="5" data-filter-switch="#uid-template-trade">交易狀況</a>
-                    <a href="#" class="c-tab__clone " target="_self" title="基本資料" data-tab-target="tab-6" data-filter-switch-columns="6" data-filter-switch="#uid-template-base">基本資料</a>
+                    <a href="#" class="c-tab__clone is-active" target="_self" title="市價績效" data-tab-target="tab-1" data-filter-switch-columns="marketPriceTable">市價績效</a>
+                    <a href="#" class="c-tab__clone " target="_self" title="淨值績效" data-tab-target="tab-2" data-filter-switch-columns="netWorthTable">淨值績效</a>
+                    <a href="#" class="c-tab__clone " target="_self" title="市價風險" data-tab-target="tab-3" data-filter-switch-columns="marketRiskTable" data-filter-switch="#uid-template-marketRisk">市價風險</a>
+                    <a href="#" class="c-tab__clone " target="_self" title="淨值風險" data-tab-target="tab-4" data-filter-switch-columns="netWorthRiskTable" data-filter-switch="#uid-template-netWorthRisk">淨值風險</a>
+                    <a href="#" class="c-tab__clone " target="_self" title="交易狀況" data-tab-target="tab-5" data-filter-switch-columns="tradeTable" data-filter-switch="#uid-template-trade">交易狀況</a>
+                    <a href="#" class="c-tab__clone " target="_self" title="基本資料" data-tab-target="tab-6" data-filter-switch-columns="baseTable" data-filter-switch="#uid-template-base">基本資料</a>
                     @*<a href="#" class="c-tab__clone " target="_self" title="查無商品" data-tab-target="tab-7" data-filter-empty="true">查無商品</a>*@
                 </div>
             </div>
