--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
@@ -1286,7 +1286,7 @@
                 </div>
             </section>
             <section class="c-section u-printBreak">
-                <div class="c-section__title">基準指數-道瓊指數</div>
+                <div class="c-section__title">基準指數-@BasicData.IndicatorIndexName</div>
                 <div class="c-section__content">
                     <div class="l-dataNotes u-left"><span class="t-tip">近一年各月報酬率</span></div>
                     @if (Model.FundDowJonesIndexs.Any())
@@ -2658,7 +2658,7 @@
 
 <script>
     var url = new URL(location.href);
-    var fundId = url.searchParams.get('id');
+    var fundId = url.searchParams.get('id').toUpperCase();
 </script>
 
 <script defer>
@@ -2804,8 +2804,7 @@
             },
             error: function (err) {
                 console.log(err)
-                $('#openDoc').addClass("u-hidden");
-                $('#openDoc').find('a')[0].setAttribute("href", ""); },
+               },
         });
           $.ajax({
             url: `@FundDocLinkApiUrl`,
@@ -2819,9 +2818,9 @@
             {
                 if (result && result.resultSet.result[0].v1)
                 {
-                    //公開說明書
+                    //簡式公開說明書
                     $('#easyopenDoc').removeClass("u-hidden")
-                    $('#easyopenDoc').find('a')[0].setAttribute("href", result.resultSet.result.v1);
+                    $('#easyopenDoc').find('a')[0].setAttribute("href", result.resultSet.result[0].v1);
                 } else
                 {
                     $('#easyopenDoc').addClass("u-hidden");
@@ -2830,9 +2829,8 @@
             },
 
               error: function (err) {
-                  console.log(err)
-                  $('#easyopenDoc').addClass("u-hidden");
-                  $('#easyopenDoc').find('a')[0].setAttribute("href", "");  },
+                  console.log(err);
+                   },
         });
         $.ajax({
             url: `@FundDocLinkApiUrl`,
@@ -2854,8 +2852,7 @@
             },
             error: function (err) {
                 console.log(err)
-                $('#financialReportDoc').addClass("u-hidden")
-                $('#financialReportDoc').find('a')[0].setAttribute("href", "");},
+                },
         });
         $.ajax({
             url: `@FundDocLinkApiUrl`,
@@ -2876,9 +2873,8 @@
                 }
             },
             error: function (err) {
-                console.log(err)
-                $('#monthReportDoc').addClass("u-hidden")
-                $('#monthReportDoc').find('a')[0].setAttribute("href", ""); },
+                console.log(err);
+               },
         });
 
 
@@ -3402,8 +3398,8 @@
                         if (Object.keys(data.resultSet.result).length != 0) {
                              mapData = data.resultSet.result.map(item => {
                                 return {
-                                    x: new Date(item.v1).getTime(),
-                                    name: item.v1,
+                                    x: new Date(item.v1.replaceAll('/', '-')).getTime(),
+                                    name: item.v1.replaceAll('/', '-'),
                                     y: roundToTwo(item.v2)
                                 };
                              });
