--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
@@ -1288,7 +1288,7 @@
                 </div>
             </section>
             <section class="c-section u-printBreak">
-                <div class="c-section__title">基準指數-道瓊指數</div>
+                <div class="c-section__title">基準指數-@BasicData.IndicatorIndexName</div>
                 <div class="c-section__content">
                     <div class="l-dataNotes u-left"><span class="t-tip">近一年各月報酬率</span></div>
                     @if (Model.FundDowJonesIndexs.Any())
@@ -2703,7 +2703,7 @@
 
 <script>
     var url = new URL(location.href);
-    var fundId = url.searchParams.get('id');
+    var fundId = url.searchParams.get('id').toUpperCase();
 </script>
 
 <script defer>
@@ -3482,8 +3482,8 @@
                             if (Object.keys(data.resultSet.result).length != 0) {
                                  mapData = data.resultSet.result.map(item => {
                                     return {
-                                        x: new Date(item.v1).getTime(),
-                                        name: item.v1,
+                                        x: new Date(item.v1.replaceAll('/', '-')).getTime(),
+                                        name: item.v1.replaceAll('/', '-'),
                                         y: roundToTwo(item.v2)
                                     };
                                 });
