Fix：ETF詳細頁防呆
- View 加 Model 為空的判斷
- 調整 實作 ETFDetailsCache 方法時 set ETFId 屬性

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/EtfDetailIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/EtfDetailIndex.cshtml
@@ -4,11 +4,11 @@
 @using Foundation.Wealth.Extensions;
 @using Foundation.Wealth.Helper;
 @{
-    var etfData = Model.BasicEtf as EtfDetail;
-    if (etfData == null)
+    if (Model == null || Model.BasicEtf == null)
     {
         return;
     }
+    var etfData = Model.BasicEtf as EtfDetail;
 }
 
 <div class="l-mainstage">
